[package]
name = "rust-concurrency-test"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }

[[bin]]
name = "rust_concurrency_test"
path = "src/main.rs"
